# liftasm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yaml
include/: BlockingQueue.hpp  CIGAR.hpp  GZ_chunk_reader.hpp  MapqBoost.hpp  OptionParser.hpp  ProgramMetadata.hpp  ThreadPool.hpp  aligner.hpp  coordmap.hpp  file2map.hpp  get_time.hpp  gfa_bam_loader.hpp  gfa_bubble.hpp  gfa_bubble_types.hpp  gfa_collapser.hpp  gfa_deoverlapper.hpp  gfa_depth.hpp  gfa_gfa2fa.hpp  gfa_name.hpp  gfa_parser.hpp  gfa_parser_AUX.hpp  gfa_parser_types.hpp  gfa_seq.hpp  gfa_walker.hpp  kgaf.hpp  kio.hpp  kpaf.hpp  liftover.hpp  logger.hpp  minimizer_dna.hpp  mmidx.hpp  mmidx_types.hpp  options.hpp  progress_tracker.hpp  save.hpp  seed_extend.hpp  seed_extend_scores.hpp  seed_extend_types.hpp  seg_replace.hpp  seq_utils.hpp  (+1 more)
src/: CIGAR.cpp  MapqBoost.cpp  OptionParser.cpp  aligner.cpp  gfa_bam_loader.cpp  gfa_bubble.cpp  gfa_collapser.cpp  gfa_deoverlapper.cpp  gfa_depth.cpp  gfa_gfa2fa.cpp  gfa_parser.cpp  gfa_parser_AUX.cpp  gfa_seq.cpp  liftover.cpp  mmidx.cpp  options.cpp  save.cpp  seed_extend.cpp  seed_extend_scores.cpp  seg_replace.cpp  seq_utils.cpp
